<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/widget_recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/recipe_title_in_widget"
        tools:text="@string/recipe_title_example_widget"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/widget_recipe_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/recipe_ingredients_in_widget"
        android:text="@string/widget_ingredients_default_text"
        tools:text="@string/ingredients_list_example"
        android:textColor="#ffffff"
        android:textSize="12sp" />

</LinearLayout>