<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_view_spacing"
    android:layout_marginTop="@dimen/card_view_spacing"
    android:layout_marginEnd="@dimen/card_view_spacing">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/recipe_relative_padding">

        <TextView
            android:id="@+id/dessert_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/dessert_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/recipe_header_spacing"
            android:layout_toEndOf="@id/dessert_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/dessert_name" />

        <TextView
            android:id="@+id/dessert_servings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recipe_header_spacing"
            android:layout_below="@id/dessert_header"
            android:text="@string/servings_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/dessert_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/recipe_header_spacing"
            android:layout_toEndOf="@id/dessert_servings_header"
            android:layout_below="@id/dessert_name"
            android:layout_marginTop="@dimen/recipe_header_spacing"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="@string/servings_example" />

    </RelativeLayout>

</android.support.v7.widget.CardView>